@startuml

title __SERVERRESPONSE's Class Diagram__\n

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace serverresponse {
            class it.polimi.ingsw.network.message.server.serverresponse.BuildServerResponse {
                + BuildServerResponse()
                + BuildServerResponse()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace serverresponse {
            class it.polimi.ingsw.network.message.server.serverresponse.ChooseGodsServerResponse {
                + ChooseGodsServerResponse()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace serverresponse {
            class it.polimi.ingsw.network.message.server.serverresponse.EndBuildServerResponse {
                + EndBuildServerResponse()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace serverresponse {
            class it.polimi.ingsw.network.message.server.serverresponse.EndMoveServerResponse {
                + EndMoveServerResponse()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace serverresponse {
            class it.polimi.ingsw.network.message.server.serverresponse.EndTurnServerResponse {
                + EndTurnServerResponse()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace serverresponse {
            class it.polimi.ingsw.network.message.server.serverresponse.LostServerResponse {
                + LostServerResponse()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace serverresponse {
            class it.polimi.ingsw.network.message.server.serverresponse.MoveWorkerServerResponse {
                + MoveWorkerServerResponse()
                + MoveWorkerServerResponse()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace serverresponse {
            class it.polimi.ingsw.network.message.server.serverresponse.PickGodServerResponse {
                + PickGodServerResponse()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace serverresponse {
            class it.polimi.ingsw.network.message.server.serverresponse.PlaceWorkerServerResponse {
                + PlaceWorkerServerResponse()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace serverresponse {
            class it.polimi.ingsw.network.message.server.serverresponse.PlayerDisconnectedResponse {
                + PlayerDisconnectedResponse()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace serverresponse {
            class it.polimi.ingsw.network.message.server.serverresponse.PowerButtonServerResponse {
                + PowerButtonServerResponse()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace serverresponse {
            class it.polimi.ingsw.network.message.server.serverresponse.SelectWorkerServerResponse {
                - workerSelected : Integer
                + SelectWorkerServerResponse()
                + getWorkerSelected()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace serverresponse {
            class it.polimi.ingsw.network.message.server.serverresponse.ServerResponse {
                - gameManagerSays : String
                + ServerResponse()
                + execute()
                + getGameManagerSays()
                + getResponseContent()
                + getResponseStatus()
            }
          }
        }
      }
    }
  }
  

  namespace  {
    namespace t.polimi.ingsw.network {
      namespace message {
        namespace server {
          namespace serverresponse {
            class it.polimi.ingsw.network.message.server.serverresponse.WonServerResponse {
                + WonServerResponse()
            }
          }
        }
      }
    }
  }
  

  it.polimi.ingsw.network.message.server.serverresponse.BuildServerResponse -up-|> it.polimi.ingsw.network.message.server.serverresponse.ServerResponse
  it.polimi.ingsw.network.message.server.serverresponse.ChooseGodsServerResponse -up-|> it.polimi.ingsw.network.message.server.serverresponse.ServerResponse
  it.polimi.ingsw.network.message.server.serverresponse.EndBuildServerResponse -up-|> it.polimi.ingsw.network.message.server.serverresponse.ServerResponse
  it.polimi.ingsw.network.message.server.serverresponse.EndMoveServerResponse -up-|> it.polimi.ingsw.network.message.server.serverresponse.ServerResponse
  it.polimi.ingsw.network.message.server.serverresponse.EndTurnServerResponse -up-|> it.polimi.ingsw.network.message.server.serverresponse.ServerResponse
  it.polimi.ingsw.network.message.server.serverresponse.LostServerResponse -up-|> it.polimi.ingsw.network.message.server.serverresponse.ServerResponse
  it.polimi.ingsw.network.message.server.serverresponse.MoveWorkerServerResponse -up-|> it.polimi.ingsw.network.message.server.serverresponse.ServerResponse
  it.polimi.ingsw.network.message.server.serverresponse.PickGodServerResponse -up-|> it.polimi.ingsw.network.message.server.serverresponse.ServerResponse
  it.polimi.ingsw.network.message.server.serverresponse.PlaceWorkerServerResponse -up-|> it.polimi.ingsw.network.message.server.serverresponse.ServerResponse
  it.polimi.ingsw.network.message.server.serverresponse.PlayerDisconnectedResponse -up-|> it.polimi.ingsw.network.message.server.serverresponse.ServerResponse
  it.polimi.ingsw.network.message.server.serverresponse.PowerButtonServerResponse -up-|> it.polimi.ingsw.network.message.server.serverresponse.ServerResponse
  it.polimi.ingsw.network.message.server.serverresponse.SelectWorkerServerResponse -up-|> it.polimi.ingsw.network.message.server.serverresponse.ServerResponse
  it.polimi.ingsw.network.message.server.serverresponse.ServerResponse -up-|> it.polimi.ingsw.network.message.server.ServerMessage
  it.polimi.ingsw.network.message.server.serverresponse.ServerResponse o-- it.polimi.ingsw.network.message.Enum.ResponseContent : responseContent
  it.polimi.ingsw.network.message.server.serverresponse.WonServerResponse -up-|> it.polimi.ingsw.network.message.server.serverresponse.ServerResponse


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
